[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
leaflet = "0.4"
leaflet-markercluster = { path = "../.." }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "HtmlAnchorElement",
  "Window"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
